--- a/master/website/board/templates/registration/member_register.html
+++ b/master/website/board/templates/registration/member_register.html
@@ -34,6 +34,7 @@
     <script src="{% static 'js/html5shiv.js' %}"></script>
     <script src="{% static 'js/respond.min.js' %}"></script>
     <![endif]-->
+  <script src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
 </head>
 <body class="login-img-body">
 <input type="hidden" id="idcheck" value="0"/>
@@ -45,7 +46,7 @@
           </header>
           <div class="panel-body">
             <div class="form">
-              <form class="form-validate form-horizontal " id="register_form" method="get" action="/">
+              <form class="form-validate form-horizontal " id="register_form">
                 <div class="form-group ">
                   <label for="name" class="control-label col-lg-2">이름 </label>
                   <div class="col-lg-10">
@@ -55,7 +56,7 @@
                 <div class="form-group ">
                   <label for="phoneno" class="control-label col-lg-2">전화번호 </label>
                   <div class="col-lg-10">
-                    <input class=" form-control" id="phoneno" name="phoneno" type="text" />
+                    <input class=" form-control" id="phoneno" name="phoneno" type="text" placeholder="010-1234-5678"/>
                   </div>
                 </div>
                 <div class="form-group ">
@@ -65,7 +66,7 @@
                   </div>
                   <br><br>
                   <div class="col-lg-offset-2 col-lg-10">
-                    <button class="btn btn-primary" onclick="checkId()">중복검사</button>
+                    <button class="btn btn-primary" type="button" onclick="checkId()">중복검사</button>
                   </div>
                 </div>
                 <div class="form-group ">
@@ -83,7 +84,7 @@
                 <div class="form-group ">
                   <label for="email" class="control-label col-lg-2">Email </label>
                   <div class="col-lg-10">
-                    <input class="form-control " id="email" name="email" type="email" />
+                    <input class="form-control " id="email" name="email" type="email" placeholder="example@email.com"/>
                   </div>
                 </div>
                 <div class="form-group ">
@@ -125,89 +126,103 @@
 
         var xhr;
 
-        function registerMember() {
+        function registerMember() {//회원가입
 
-        user_id = document.getElementById("user_id").value;
-        if(user_id == "") {
-        alert("아이디를 입력해주세요.");
-        document.getElementById("user_id").focus();
-        return false;
+          user_id = document.getElementById("user_id").value;
+          if(user_id == "") {
+            alert("아이디를 입력해주세요.");
+            document.getElementById("user_id").focus();
+            return false;
+          }
+
+          password = document.getElementById("password").value;
+          if(password == "") {
+            alert("비밀번호를 입력해주세요.");
+            document.getElementById("password").focus();
+            return false;
+          }
+
+          confirm_password = document.getElementById("confirm_password").value;
+          if(confirm_password == "") {
+            alert("비밀번호가 일치하지 않습니다.");
+            document.getElementById("confirm_password").focus();
+            return false;
+          }
+
+          if(password != confirm_password) { //비밀번호 칸과 비밀번호 확인칸 일치하는지 체크
+            alert("비밀번호가 일치하지 않습니다.");
+            document.getElementById("confirm_password").focus();
+            return false;
+          }
+
+          encpwd = hex_sha1(password); //비밀번호 암호화
+
+          name = document.getElementById("name").value;
+          email = document.getElementById("email").value;
+          phone_num = document.getElementById("phoneno").value;
+
+          wflag = document.getElementById("clause").checked; //약관 동의여부 체크
+          if(wflag == false) {
+            alert("약관에 동의하여주십시오.");
+            return false;
+          }
+
+          idchk = document.getElementById("idcheck").value; //아이디 중복확인 했는지 체크
+          if(idchk != "1") {
+            alert("아이디 중복확인을 하십시오.");
+            return false;
+          }
+
+          var strurl = "member_insert?user_id=" + user_id + "&psswd=" + encpwd + "&user_nm=" + name +
+          "&phoneno=" + phone_num + "&email=" + email;
+
+          xhr = new XMLHttpRequest();
+          xhr.onreadystatechange = function() {
+            if(xhr.readyState == 4) {
+              var data = xhr.responseText;
+
+              var obj = JSON.parse(data);
+              alert(obj.result_msg);
+              location.href = "/";
+            }
+          };
+          xhr.open("POST", strurl);
+          xhr.setRequestHeader("X-CSRFToken", csrftoken);
+          xhr.send(null);
         }
 
-        password = document.getElementById("password").value;
-        if(password == "") {
-        document.getElementById("password").focus();
-        return false;
-        }
+        function checkId() { //아이디 중복체크
 
-        confirm_password = document.getElementById("confirm_password").value;
-        if(confirm_password == "") {
-        document.getElementById("confirm_password").focus();
-        return false;
-        }
+          user_id = document.getElementById("user_id").value;
+          if(user_id == "") {
+            alert("아이디를 입력해주세요.");
+            document.getElementById("user_id").focus();
+            return false;
+          }
 
-        if(password != confirm_password) {
-        alert("비밀번호가 일치하지 않습니다.");
-        document.getElementById("confirm_password").focus();
-        return false;
-        }
+          var strurl = "member_id_check?user_id=" + user_id;
 
-        encpwd = hex_sha1(password);
+          xhr = new XMLHttpRequest();
+          xhr.onreadystatechange = function() {
+            if(xhr.readyState == 4) {
+              var data = xhr.responseText;
 
-        name = document.getElementById("name").value;
-        email = document.getElementById("email").value;
+              var obj = JSON.parse(data);
 
-        wflag = document.getElementById("clause").checked;
-        if(wflag == false) {
-        alert("약관에 동의하여주십시오.");
-        return false;
-        }
-
-        var strurl = "member_insert?user_id=" + user_id + "&psswd=" + encpwd + "&user_nm=" + name + "&email=" + email;
-        alert(strurl);
-
-        xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function() {
-        if(xhr.readyState == 4) {
-        var data = xhr.responseText;
-
-        document.getElementById("databox_" + bno).style.display = "none";
-
-        var obj = JSON.parse(data);
-        alert(obj.result_msg);
-        }
-        };
-        xhr.open("POST", strurl);
-        xhr.setRequestHeader("X-CSRFToken", csrftoken);
-        xhr.send(null);
-        }
-
-        function checkId() {
-
-        user_id = document.getElementById("user_id").value;
-        if(user_id == "") {
-        alert("아이디를 입력해주세요.");
-        document.getElementById("user_id").focus();
-        return false;
-        }
-
-        var strurl = "member_idcheck?user_id=" + user_id;
-        alert(strurl);
-
-        xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function() {
-        if(xhr.readyState == 4) {
-        var data = xhr.responseText;
-
-        document.getElementById("databox_" + bno).style.display = "none";
-
-        var obj = JSON.parse(data);
-        alert(obj.result_msg);
-        }
-        };
-        xhr.open("POST", strurl);
-        xhr.setRequestHeader("X-CSRFToken", csrftoken);
-        xhr.send(null);
+              if(obj.flag == "1") { //중복된 아이디가 있는 경우
+                alert(obj.result_msg);
+                document.getElementById("user_id").focus();
+              }
+              else { //사용가능한 아이디인 경우
+                alert(obj.result_msg);
+                document.getElementById("idcheck").value = "1";
+                document.getElementById("user_id").disabled = true;
+              }
+            }
+          };
+          xhr.open("POST", strurl);
+          xhr.setRequestHeader("X-CSRFToken", csrftoken);
+          xhr.send(null);
         }
     </script>
 </body>
